# quick-project-templates

./: README.md
aws-python-lambda-template/: .gitignore  Dockerfile  README.md  bitbucket-pipelines.yml  docker-compose.yaml  package.json  pyproject.toml  ruff.toml  serverless.yml
aws-python-lambda-template/etc/database/: init.sql
aws-python-lambda-template/etc/test/: test-body.json
aws-python-lambda-template/src/application/: add_product.py
aws-python-lambda-template/src/configuration/: config.py
aws-python-lambda-template/src/domain/: error.py  product.py
aws-python-lambda-template/src/handler/: cron_handler.py  sqs_consumer_handler.py
aws-python-lambda-template/src/persistence/: product_repository.py  queries.py
aws-python-lambda-template/src/shared/: decorator.py  mappers.py
aws-python-lambda-template/tests/application/: test_add_product.py
aws-python-lambda-template/tests/shared/: test_mappers.py
aws-python-lambda-template/tests/utils/: object_mother.py
python-microservice-template/: README.md  docker-compose.yaml  pyproject.toml  sonar-project.properties
python-microservice-template/app/: main.py
python-microservice-template/app/application/: add_product.py  find_product_by_id.py
python-microservice-template/app/configuration/: config.py
python-microservice-template/app/domain/: exceptions.py  product.py
python-microservice-template/app/infrastructure/persistence/: product_repository.py  queries.py
python-microservice-template/app/infrastructure/repository/: product_repository.py
python-microservice-template/app/infrastructure/routers/: dto.py  exception_handlers.py  products.py
python-microservice-template/app/shared/: mappers.py
python-microservice-template/etc/database/: schema.sql
python-microservice-template/tests/application/: test_add_product.py  test_authenticate_user.py  test_find_product_by_id.py  test_find_user_by_id.py  test_register_user.py
python-microservice-template/tests/infrastructure/repository/: test_integration_user_repository.py  test_user_repository.py
python-microservice-template/tests/shared/: test_mappers.py
python-microservice-template/tests/utils/: object_mother.py
