[tool.poetry]
name = "aws-python-lambda-template"
version = "0.1.0"
description = "Template for AWS Lambda using the traditional Serverless Framework"
authors = ["Walter Cardozo <waltercrdz@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.35.67"
httpx = "^0.27.2"
psycopg2 = "^2.9.10"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
pytest = "^8.3.3"
coverage = "^7.6.7"
ruff = "^0.8.0"

[tool.pytest.ini_options]
pythonpath = "src"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = "src"
strict = true
python_version = "3.12"
disallow_untyped_defs = true
ignore_missing_imports = false
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = false
